# rag-tuning-lab

./: .gitattributes  .gitignore  LICENSE  README.md  ROADMAP.md  environment.yml  pyproject.toml  requirements-transformers.txt  requirements.txt
configs/: chroma.yaml  chroma_no_rerank.yaml  diseases.yaml  docs.yaml  milvus.yaml  milvus_lite.yaml  play.yaml  play_milvus.yaml
data/: eval_queries.yaml  eval_queries_diseases.yaml  eval_queries_diseases_v2.yaml  eval_queries_docs.yaml  interview_cards.jsonl
data/docs/: README.md
data/files/others/: Medical-reocrd-template.md  Triage-report-template.md
data/tables/: results_gotocr.json  results_ppstructure.json  results_rapidocr.json
data/tables/gt/: t1_merged.json  t2_crosspage.json  (+3 more)
experiments/: LEADERBOARD.md  PLAN.md  README.md  STUDY.md  advanced_rag.md  clip_vs_caption.md  gen_runs.jsonl  runs.jsonl  serving.md  table_ocr.md
infra/milvus/: docker-compose.yml
scripts/: gpu_chain.sh  make_table_corpus.py  ocr_table_eval.py  quickstart.ps1  start_milvus.ps1  table_eval.py
src/rag_lab/: __init__.py  ask.py  bm25.py  chunking.py  clip_index.py  compare_runs.py  config.py  contextual.py  crag.py  doctor.py  embeddings.py  eval.py  evalgen.py  experiment.py  formatting.py  gen_eval.py  generate.py  graph_build.py  graph_community.py  graph_extract.py  graph_query.py  ingest.py  interview_game.py  llm.py  loaders.py  metrics.py  models.py  multimodal.py  parent_doc.py  pipeline.py  query.py  query_rewrite.py  repl.py  rerankers.py  semantic_cache.py  serve.py  sources.py  stores.py  structured.py  sweep.py  (+1 more)
(+11 files in other folders)
