[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-tuning-lab"
version = "0.1.0"
description = "A small RAG retrieval and reranking tuning lab for Chroma and Milvus."
readme = "README.md"
requires-python = ">=3.10,<3.13"

[tool.setuptools.packages.find]
where = ["src"]
